line up fiture
